adding insert API
